// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codegen add tests Adding codegen twice gives appropriate message in JS project 1`] = `
"projects:
  addcodegen1eabf5a9d8:
    schemaPath: amplify/backend/api/addcodegen1eabf5a9d8/build/schema.graphql
    includes:
      - src/graphql/**/*.js
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: javascript
        generatedFileName: ''
        docsFilePath: src/graphql
        region: us-west-2
        apiId: null
        maxDepth: 2
extensions:
  amplify:
    version: 3
"
`;

exports[`codegen add tests Adding codegen works as expected in android project 1`] = `
"projects:
  addcodegen1eabf5a321:
    schemaPath: app/src/main/graphql/schema.json
    includes:
      - app/src/main/graphql/**/*.graphql
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: ''
        generatedFileName: ''
        docsFilePath: app/src/main/graphql/com/amazonaws/amplify/generated/graphql
        region: us-west-2
        apiId: null
        maxDepth: 2
"
`;

exports[`codegen add tests Adding codegen works as expected in ios project 1`] = `
"projects:
  addcodegen1eabf5ad76:
    schemaPath: amplify/backend/api/addcodegen1eabf5ad76/build/schema.graphql
    includes:
      - graphql/**/*.graphql
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: swift
        generatedFileName: API.swift
        docsFilePath: graphql
        region: us-west-2
        apiId: null
        maxDepth: 2
"
`;

exports[`codegen add tests Adding codegen works as expected in javascript project 1`] = `
"projects:
  addcodegen1eabf5ac84:
    schemaPath: amplify/backend/api/addcodegen1eabf5ac84/build/schema.graphql
    includes:
      - src/graphql/**/*.js
    excludes:
      - ./amplify/**
    extensions:
      amplify:
        codeGenTarget: javascript
        generatedFileName: ''
        docsFilePath: src/graphql
        region: us-west-2
        apiId: null
        maxDepth: 2
"
`;
